# maratona-solidaria

./: README.md  docker-compose.old.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
api-flask/: Dockerfile  config.py  manage.py  requirements.txt  steup.cfg  wsgi.py
api-flask/app/: app.py  entrypoint.sh  extentions.py
api-flask/app/blueprints/: aluno.py  auth.py  doacao.py  donate.py  equipe.py  public.py
api-flask/app/models/: __init__.py  aluno.py  colaborador.py  doacao.py  equipe.py  user.py
api-flask/migrations/versions/: 1465ba10e93f_.py  171e17127b07_.py  4136650ddb21_.py  4511695bbe0b_.py  692514ba01d2_.py  a3c281f75f20_.py  b842001d6a94_.py  c4e4756651e2_.py  dcf72e579f09_.py  f31392574c4d_.py
api-flask/tests/: test_aluno.py  test_auth.py  test_donation.py  test_public.py
app/: config.py
front-angular/maratona-solidaria/: Dockerfile  README.md  angular.json  package.json
front-angular/maratona-solidaria/src/: index.html
maratona-solidaria/: .gitignore  Dockerfile  angular.json  karma.conf.js  package-lock.json  package.json
maratona-solidaria-api/: .coverage  config.py  coverage.sh  manage.py  requirements.txt
maratona-solidaria-api/app/: entrypoint.sh  extentions.py
maratona-solidaria-api/app/blueprints/: aluno.py  doacao.py  equipe.py  public.py
maratona-solidaria-api/app/models/: __init__.py  blacklist.py  colaborador.py  doacao.py  equipe.py
maratona-solidaria-api/migrations/versions/: 051714ca5cc3_.py
maratona-solidaria-api/tests/: .coverage  test_public.py
maratona-solidaria/src/: index.html  styles.css
(+89 files in other folders)
